--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "shake.js": "^1.2.2",
     "snapsvg": "^0.5.1",
     "tone": "^0.12.80",
-    "vue": "^2.5.17"
+    "vue": "^2.5.21"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.2.0",
@@ -32,13 +32,13 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-plugin-vue": "^5.0.0",
     "imports-loader": "^0.8.0",
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.11.0",
     "vue-holderjs": "^1.0.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.21"
   },
   "babel": {
     "presets": [
