--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.1",
+    "audiorecorder": "0.0.2",
+    "file-saver": "^2.0.0",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.5.2",
     "sass-loader": "^7.1.0",
