--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-regular-svg-icons": "^5.6.1",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/vue-fontawesome": "^0.1.3",
     "array.prototype.flat": "^1.2.1",
     "audiorecorder": "0.0.2",
     "file-saver": "^2.0.0",
@@ -56,9 +60,13 @@
       "plugin:vue/essential"
     ],
     "rules": {
-      "semi": ["error", "never"],
+      "semi": [
+        "error",
+        "never"
+      ],
       "indent": [
-        "error", 4
+        "error",
+        4
       ],
       "quotes": [
         "error",
