--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.6.1",
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/vue-fontawesome": "^0.1.3",
+    "animate.css": "^3.7.0",
     "audiorecorder": "0.0.2",
     "file-saver": "^2.0.0",
     "imports-loader": "^0.8.0",
