--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.3",
     "animate.css": "^3.7.0",
     "file-saver": "^2.0.0",
+    "gsap": "^2.0.2",
     "imports-loader": "^0.8.0",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.5.2",
