--- a/now.json
+++ b/now.json
@@ -1,17 +1,15 @@
- {
-  "name": "CacaSons",
-  "type": "static",
-  "static": {
-    "public": "dist",
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  },
-  "alias": "cacasons",
-  "files": [
-    "dist"
-  ]
+{
+    "name": "CacaSons",
+    "type": "static",
+    "static": {
+        "public": "dist",
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ]
+    },
+    "alias": "cacasons",
+    "files": ["dist"]
 }
