--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fortawesome/free-regular-svg-icons": "^5.6.3",
         "@fortawesome/free-solid-svg-icons": "^5.6.3",
         "@fortawesome/vue-fontawesome": "^0.1.5",
+        "@sentry/browser": "^4.5.3",
         "animate.css": "^3.7.0",
         "file-saver": "^2.0.0",
         "gsap": "^2.0.2",
