--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-    "name": "caca-sons",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.12",
-        "@fortawesome/free-regular-svg-icons": "^5.6.3",
-        "@fortawesome/free-solid-svg-icons": "^5.6.3",
-        "@fortawesome/vue-fontawesome": "^0.1.5",
-        "@sentry/browser": "^4.5.3",
-        "animate.css": "^3.7.0",
-        "file-saver": "^2.0.0",
-        "gsap": "^2.0.2",
-        "imports-loader": "^0.8.0",
-        "lodash": "^4.17.11",
-        "portal-vue": "^2.1.5",
-        "register-service-worker": "^1.5.2",
-        "sass-loader": "^7.1.0",
-        "screenfull": "^4.0.0",
-        "shake.js": "^1.2.2",
-        "tone": "^13.4.9",
-        "vexflow": "^1.2.89",
-        "vue": "^2.5.22",
-        "vue-holderjs": "^1.0.2",
-        "vuex": "^3.0.1"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.3.0",
-        "@vue/cli-plugin-eslint": "^3.3.0",
-        "@vue/cli-plugin-pwa": "^3.3.0",
-        "@vue/cli-service": "^3.3.1",
-        "@vue/eslint-config-prettier": "^4.0.0",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.12.1",
-        "eslint-plugin-vue": "^5.1.0",
-        "node-sass": "^4.9.0",
-        "vue-template-compiler": "^2.5.22"
-    }
+  "name": "caca-sons",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-regular-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@sentry/browser": "^4.5.3",
+    "animate.css": "^3.7.0",
+    "file-saver": "^2.0.0",
+    "gsap": "^2.0.2",
+    "imports-loader": "^0.8.0",
+    "lodash": "^4.17.11",
+    "portal-vue": "^2.1.5",
+    "register-service-worker": "^1.5.2",
+    "sass-loader": "^7.1.0",
+    "screenfull": "^4.0.0",
+    "shake.js": "^1.2.2",
+    "tone": "^13.4.9",
+    "vexflow": "^1.2.89",
+    "vue": "^2.5.22",
+    "vue-holderjs": "^1.0.2",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
+    "@vue/eslint-config-prettier": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.1",
+    "eslint-plugin-vue": "^5.1.0",
+    "node-sass": "^4.9.0",
+    "vue-template-compiler": "^2.5.22"
+  }
 }
