--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "postbuild": "node scripts/compile_jsons.js",
+    "postbuild2": "node scripts/compile_jsons.js",
     "preserve": "NODE_ENV=development npm run postbuild"
   },
   "dependencies": {
