Fix publicPath throughout code

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postbuild2": "node scripts/compile_jsons.js",
-    "preserve": "NODE_ENV=development npm run postbuild"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
