--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postbuild": "node scripts/compile_jsons.js",
+    "preserve": "NODE_ENV=development npm run postbuild"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
