--- a/admin/config.yml
+++ b/admin/config.yml
@@ -7,6 +7,7 @@ media_folder: '/audios/uploads'
 public_folder: '/audios/uploads'
 
 logo_url: https://digitopia.casadamusica.com/sons/img/icons/ms-icon-310x310.png
+locale: 'pt'
 
 collections:
     - name: 'audios' # Used in routes, e.g., /admin/collections/blog
@@ -27,7 +28,6 @@ collections:
           - label: 'Image'
             name: 'image'
             widget: 'image'
-            media_library:
 
           - label: 'Audio'
             name: 'audio'
